[tool.poetry]
name = "hissanova.github.io"
version = "0.1.0"
description = ""
authors = ["hissanova"]

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.8.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
